force-app/main/default/objects/HFS_Item__c/HFS_Item__c.object-meta.xml
<CustomObject>
    <label>SCS Item</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>SCS Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SCS Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>