force-app/main/default/objects/HFS_Item__c/fields/Bag_ID_3__c.field-meta.xml
<CustomField>
    <fullName>Bag_ID_3__c</fullName>
    <label>Bag ID(s) 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>