force-app/main/default/objects/HFS_Item__c/fields/Bag_ID__c.field-meta.xml
<CustomField>
    <fullName>Bag_ID__c</fullName>
    <label>Bag ID(s)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>