force-app/main/default/objects/HFS_Item__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Brand</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Village_Presence__c.Village__r.Name</field>
            <operation>equals</operation>
            <valueField>$User.Village__c</valueField>
        </filterItems>
        <filterItems>
            <field>Village_Presence__c.Status__c</field>
            <operation>equals</operation>
            <value>Trading</value>
        </filterItems>
        <infoMessage>Please select a Brand from within your village</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Village_Presence__c</referenceTo>
    <relationshipLabel>SCS Items</relationshipLabel>
    <relationshipName>HFS_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>