force-app/main/default/objects/HFS_Item__c/fields/HFS_Experience__c.field-meta.xml
<CustomField>
    <fullName>HFS_Experience__c</fullName>
    <label>SCS Experience</label>
    <referenceTo>HFS_Experience__c</referenceTo>
    <relationshipLabel>SCS Items</relationshipLabel>
    <relationshipName>HFS_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>