force-app/main/default/objects/HFS_Item__c/fields/In_Storage_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>In_Storage_Date_Time__c</fullName>
    <label>In Storage Date/Time</label>
    <type>DateTime</type>
</CustomField>