force-app/main/default/objects/HFS_Item__c/fields/My_Item_Runner__c.field-meta.xml
<CustomField>
    <fullName>My_Item_Runner__c</fullName>
    <formula>Runner__c =  $User.Id</formula>
    <label>My Item (Runner)</label>
    <type>Checkbox</type>
</CustomField>