force-app/main/default/objects/HFS_Item__c/fields/Number_of_Bags__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Bags__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Number of Bags</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>