force-app/main/default/objects/HFS_Item__c/fields/Receipt_Amount__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Amount__c</fullName>
    <label>Receipt Amount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>