force-app/main/default/objects/HFS_Item__c/fields/Receipt_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Date_Time__c</fullName>
    <label>Receipt Date/Time</label>
    <type>DateTime</type>
</CustomField>