force-app/main/default/objects/HFS_Item__c/fields/Request_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Request_Date_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Request Date/Time</label>
    <type>DateTime</type>
</CustomField>