force-app/main/default/objects/HFS_Item__c/fields/Request_to_Storage_Time_mins__c.field-meta.xml
<CustomField>
    <fullName>Request_to_Storage_Time_mins__c</fullName>
    <formula>(( In_Storage_Date_Time__c -  Request_Date_Time__c )*1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the number of minutes between the initial request and the time it was placed into storage</inlineHelpText>
    <label>Request to Storage Time (mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>