force-app/main/default/objects/HFS_Item__c/fields/Runner__c.field-meta.xml
<CustomField>
    <fullName>Runner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Runner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.TIC_Runner__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>User.Village__c</field>
            <operation>equals</operation>
            <valueField>$User.Village__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>HFS_Items</relationshipName>
    <type>Lookup</type>
</CustomField>