force-app/main/default/objects/HFS_Item__c/fields/Shelf__c.field-meta.xml
<CustomField>
    <fullName>Shelf__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shelf</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$User.Village__c</field>
            <operation>equals</operation>
            <valueField>Shelf__c.Village__r.Name</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Shelf__c</referenceTo>
    <relationshipName>HFS_Items</relationshipName>
    <type>Lookup</type>
</CustomField>