force-app/main/default/objects/HFS_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
                <default>true</default>
                <label>Requested</label>
            </value>
            <value>
                <fullName>Runner On Way</fullName>
            </value>
            <value>
                <fullName>With Runner</fullName>
            </value>
            <value>
                <fullName>In Storage</fullName>
            </value>
            <value>
                <fullName>With TIC</fullName>
            </value>
            <value>
                <fullName>Customer Collected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>