force-app/main/default/objects/HFS_Item__c/fields/Status_Step__c.field-meta.xml
<CustomField>
    <fullName>Status_Step__c</fullName>
    <description>Enables a sequence of actions on the items</description>
    <formula>CASE(TEXT(Status__c), &quot;Requested&quot;, 1, &quot;Runner On Way&quot;, 2,&quot;With Runner&quot;,3, &quot;In Storage&quot;,4,&quot;With TIC&quot;,5,&quot;Customer Collected&quot;,6,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Step</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>