force-app/main/default/objects/HFS_Item__c/fields/Store_Pickup_Location__c.field-meta.xml
<CustomField>
    <fullName>Store_Pickup_Location__c</fullName>
    <inlineHelpText>Where is the bag going to be left at the store?</inlineHelpText>
    <label>Store Pickup Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Downstairs</fullName>
            </value>
            <value>
                <fullName>Upstairs</fullName>
            </value>
            <value>
                <fullName>Back Door</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>