force-app/main/default/objects/HFS_Item__c/fields/Time_from_Purchase_to_Request_mins__c.field-meta.xml
<CustomField>
    <fullName>Time_from_Purchase_to_Request_mins__c</fullName>
    <formula>((  Request_Date_Time__c -  Receipt_Date_Time__c  )*1440)</formula>
    <label>Time from Purchase to Request (mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>