force-app/main/default/objects/HFS_Item__c/fields/Time_in_Storage_mins__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Storage_mins__c</fullName>
    <formula>((  Customer_Collect_Date_Time__c - In_Storage_Date_Time__c )*1440)</formula>
    <label>Time in Storage (mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>