force-app/main/default/objects/HFS_Item__c/fields/Village_Presence_Email__c.field-meta.xml
<CustomField>
    <fullName>Village_Presence_Email__c</fullName>
    <description>Populated by workflow so an email can be sent</description>
    <label>Village Presence Email</label>
    <type>Email</type>
</CustomField>