force-app/main/default/objects/HFS_Item__c/validationRules/Enforce_Item_Sequence.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Item_Sequence</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Status_Step__c) &amp;&amp;
PRIORVALUE(Status_Step__c) + 1 &lt;&gt; Status_Step__c</errorConditionFormula>
    <errorMessage>The SCS Item must be actioned in the correct order, 

1. Requested
2. Runner On Way
3. With Runner
4. In Storage
5. With TIC
6. Customer Collected</errorMessage>
</ValidationRule>