force-app/main/default/objects/HFS_Item__c/validationRules/items_in_storage_must_have_shelf.validationRule-meta.xml
<ValidationRule>
    <fullName>items_in_storage_must_have_shelf</fullName>
    <active>true</active>
    <description>If an item is in storage, it must be allocated to a shelf</description>
    <errorConditionFormula>(ISPICKVAL(  Status__c , &quot;In Storage&quot;)  &amp;&amp; isblank(Shelf__c ))

 ||
(
NOT(ISPICKVAL(  Status__c , &quot;In Storage&quot;))  &amp;&amp; NOT(isblank(Shelf__c ))

)</errorConditionFormula>
    <errorMessage>Only Items in Storage can (must) have an allocated shelf</errorMessage>
</ValidationRule>