force-app/main/default/objects/HFS_Item__c/validationRules/Runners_Cannot_change_Brand.validationRule-meta.xml
<ValidationRule>
    <fullName>Runners_Cannot_change_Brand</fullName>
    <active>true</active>
    <description>Do not allow runners to change Brand</description>
    <errorConditionFormula>NOT(ISNEW())
&amp;&amp;  ISCHANGED( Brand__c ) 
&amp;&amp; $User.Profile_Name__c = &quot;TIC Runner&quot;</errorConditionFormula>
    <errorMessage>Runners cannot change the Brand</errorMessage>
</ValidationRule>