force-app/main/default/objects/HFS_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bag_ID__c</columns>
    <columns>Brand__c</columns>
    <columns>HFS_Experience__c</columns>
    <columns>Request_Date_Time__c</columns>
    <columns>Shelf__c</columns>
    <columns>Runner__c</columns>
    <columns>Status__c</columns>
    <columns>Customer_Collect_Date_Time__c</columns>
    <columns>In_Storage_Date_Time__c</columns>
    <columns>Receipt_Amount__c</columns>
    <columns>Receipt_Date_Time__c</columns>
    <columns>Request_to_Storage_Time_mins__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>