force-app/main/default/objects/HFS_Item__c/listViews/Current_Collects.listView-meta.xml
<ListView>
    <fullName>Current_Collects</fullName>
    <columns>NAME</columns>
    <columns>Bag_ID__c</columns>
    <columns>Status__c</columns>
    <columns>Brand__c</columns>
    <columns>HFS_Experience__c</columns>
    <columns>Request_Date_Time__c</columns>
    <columns>Runner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Requested,Runner On Way,With Runner</value>
    </filters>
    <label>Current Collects</label>
</ListView>