force-app/main/default/objects/HFS_Item__c/listViews/No_Runner_Response.listView-meta.xml
<ListView>
    <fullName>No_Runner_Response</fullName>
    <columns>NAME</columns>
    <columns>Bag_ID__c</columns>
    <columns>Brand__c</columns>
    <columns>HFS_Experience__c</columns>
    <columns>Request_Date_Time__c</columns>
    <columns>Shelf__c</columns>
    <columns>Runner__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Requested</value>
    </filters>
    <label>No Runner Response</label>
</ListView>