force-app/main/default/objects/HFS_Item__c/listViews/Shelf_Allocations.listView-meta.xml
<ListView>
    <fullName>Shelf_Allocations</fullName>
    <columns>Shelf__c</columns>
    <columns>NAME</columns>
    <columns>Bag_ID__c</columns>
    <columns>Brand__c</columns>
    <columns>HFS_Experience__c</columns>
    <columns>Request_Date_Time__c</columns>
    <columns>Runner__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Shelf__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Shelf Allocations</label>
</ListView>